--- a/MysqlPot/INSTALL.txt
+++ b/MysqlPot/INSTALL.txt
@@ -1,6 +1,16 @@
 Steps to install the code:
 
-go in Server.cs and fix your client IP
+Compile:
+
+- using NANT
+- using Monodevelop (Unix and Mac tested)
+- using Visual Studio (Express is fine)
 
 Run in:
+
+mono MysqlPot.exe Port Logile IP
+
+Example:
+
+mono MysqlPot.exe 3306 /Users/flake/mysqlpot.log 192.168.1.44
 
